--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^1.1.1
   cloud_firestore: ^4.17.4
   firebase_app_check: ^0.2.2+6
+  firebase_messaging: ^14.9.3
 
 dev_dependencies:
   flutter_test:
